...
    "next": "Next",
    "save": "Save",
    "delete": "Delete",
    "edit": "Edit",
    "send": "Send",
    "retry": "Retry",
    "ok": "OK",
    "report": "Report",
    "share": "Share",
    "update": "Update",
    "block": "Block",
    "yes": "Yes",
    "no": "No",
...
